# wingpanel-indicator-power

./: .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: Indicator.css  icons.gresource.xml  io.elementary.desktop.wingpanel.power.gschema.xml  meson.build  power.appdata.xml.in  power.gschema.xml  power.metainfo.xml.in  wingpanel.power.appdata.xml
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+167 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+166 more)
schemas/: meson.build  org.pantheon.desktop.wingpanel.indicators.power.gschema.xml
src/: CMakeLists.txt  Indicator.vala  Utils.vala  config.vala.in  meson.build
src/Helpers/: Inhibitor.vala
src/Services/: AppManager.vala  Device.vala  DeviceManager.vala  PowerProfile.vala  PowerProfileManager.vala  SettingsManager.vala
src/Services/Backlight/: Backlight.vala
src/Services/DBusInterfaces/: Device.vala  PowerProfile.vala  PowerProfiles.vala  Properties.vala  Screen.vala  UPower.vala
src/Services/ProcessMonitor/: Monitor.vala  Process.vala
src/Widgets/: AppList.vala  BrightnessSlider.vala  DeviceList.vala  DeviceRow.vala  DisplayWidget.vala  PopoverWidget.vala  PowerModeButton.vala  PowerModeList.vala  PowerProfileList.vala  PowerProfileRow.vala  ScreenBrightness.vala
src/ddc/: ddc.c  ddc.h  ddc.vapi
vapi/: libddcutil.vapi  libudev.vapi
